--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,8 +4,7 @@
 
 .nav-list {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  flex-wrap: wrap;
   gap: 40px;
 }
 
@@ -13,9 +12,42 @@
   font-weight: 500;
   letter-spacing: 0.02em;
   line-height: 1.5;
+  white-space: nowrap;
 }
 
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+}
+.section-link {
+  /* 
+  color: #61677c;
+  font-weight: 600;
+  font: inherit; */
+  text-decoration: none;
+
+  max-width: 150px;
+  padding: 8px 12px;
+
+  border: 0;
+  outline: 0;
+  border-radius: 100px;
+
+  background-color: #ebecf0;
+  text-shadow: 1px 1px 0 #fff;
+
+  font-size: 16px;
+  font: inherit;
+  font-weight: bold;
+
+  color: #61677c;
+  box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
+}
+.section-link:hover {
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+}
+.section-link:active {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
