--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,15 @@
-<header class="header">
+<header class="header section">
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+        <a href="./1-timer.html" class="nav-link section-link"
+          >Click to go to page Timer</a
+        >
       </li>
-
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <a href="./2-snackbar.html" class="nav-link section-link"
+          >Click to go to page Snackbar</a
+        >
       </li>
     </ul>
   </nav>
